[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
solana-sdk = "2.2.2"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
base64 = "0.22.1" 

[dev-dependencies]
tokio-test = "0.4.4"
