[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
solana-sdk = "2.2.2"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
base64 = "0.22.1"
hex = "0.4.3"
bs58 = "0.5.1"
futures-util = "0.3.31"

[dev-dependencies]
tokio-test = "0.4.4"
