[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
base64 = "0.22.1"
hex = "0.4.3"
bs58 = "0.5.1"
futures-util = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"

# Tagged for compatibility
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
serde_json = "1.0.140"

[dev-dependencies]
tokio-test = "0.4.4"
