[package]
name = "jwt-zk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# SP1 dependencies
sp1-sdk = "5.0.0"
rsa = "0.9.6"
base64 = "0.22.1"

# Server dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] } 