[package]
name = "jwt-zk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# SP1 dependencies
sp1-sdk = "5.0.3"
rsa = "0.9.8"
base64 = "0.22.1"

# Server dependencies
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
anyhow = "1.0.98"
hex = "0.4.3"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
reqwest = { version = "0.12.19", features = ["json"] } 

[build-dependencies]
sp1-build = "5.0.0"